# rs-ali-oss

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  setup.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: bucket-acl-design.md
src/: client.rs  config.rs  crc64.rs  credential.rs  encoding.rs  error.rs  lib.rs  middleware.rs  progress.rs
src/auth/: mod.rs  v4.rs
src/ops/: bucket.rs  mod.rs  multipart.rs  object.rs  paginator.rs  presign.rs  transfer.rs
src/types/: common.rs  mod.rs  response.rs
src/types/request/: bucket.rs  mod.rs  multipart.rs  object.rs  presign.rs
tests/: bucket_ops.rs  multipart_ops.rs  object_ops.rs  real_oss.rs  retry.rs
